--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
 
             <div id="head">The Olive Pit</div>
+            <div>- the best medetarranian food in south jersey -</div>
 
 
 </body>
