--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 
             <div id="head">The Olive Pit</div>
-            <div>- the best medetarranian food in south jersey -</div>
+            <div id="subHead">- the best medetarranian food in south jersey -</div>
 
             <div id="theButton"class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
