--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     
     <link rel="stylesheet" href="style.css">
+
+    <img id='mainLogo'src="./img/logo1.png" width="310" height="149"></img>
+
 </head>
 <body>
     
 
-            <div id="head">The Olive Pit</div>
+  <!-- <img id='mainLogo'src="./img/logo1.png" width="310" height="149"></img> -->
+
+            <!-- <div id="head">The Olive Pit</div> -->
             <div id="subHead">- the best medetarranian food in south jersey -</div>
+
+
+
+            <!-- <img id='mainLogo'src="./img/logo1.png"></img> -->
+
 
             <hr>
             <hr>
