--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./img/food1.jpg" width="310" height="149" class="d-block w-100" alt="...">
+                    <img id="foodImages"src="./img/food1.jpg"  class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/food2.jpg" width="310" height="149" class="d-block w-100" alt="...">
+                    <img id="foodImages"src="./img/food2.jpg"  class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/food3.jpg" width="310" height="149" class="d-block w-100" alt="...">
+                    <img id="foodImages"src="./img/food3.jpg"  class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
