--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
             <!-- <div id="head">The Olive Pit</div> -->
             <div id="subHead">- the best medetarranian food in south jersey -</div>
+            <hr id="break1">
+          
 
 
 
@@ -30,7 +32,7 @@
 
             <div id="theButton"class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                  click me
+                  menu
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                   <li><a class="dropdown-item" href="#">Our Story</a></li>
@@ -38,6 +40,9 @@
                   <li><a class="dropdown-item" href="#">Contact</a></li>
                 </ul>
               </div>
+
+
+              <hr id="break1">
 
 
 
