starting back up again

--- a/index.html
+++ b/index.html
@@ -23,11 +23,25 @@
 
 
 
+
+            <div id="hours1">Mon-Thurs 11AM-11PM • Fri & Sat 11AM-MIDNIGHT • Sun 12 NOON-11PM</div>
+            <hr id="break1">
+
+
             <!-- <img id='mainLogo'src="./img/logo1.png"></img> -->
 
 
             <!-- <hr>
             <hr> -->
+
+
+                  <a href="tel:8565830987" >856-583-0987</a>
+                  <!-- <div id="call">856-583-0987</div> -->
+                  <div id="location">508 Hurffville-Cross Keys Rd.</div>
+
+
+
+
 
 
             <div id="theButton"class="dropdown">
