--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <hr> -->
 
 
-                  <a href="tel:8565830987" >856-583-0987</a>
-                  <!-- <div id="call">856-583-0987</div> -->
-                  <div id="location">508 Hurffville-Cross Keys Rd.</div>
+                  <!-- <a href="tel:8565830987" >856-583-0987</a>
+                  <div id="call">856-583-0987</div>
+                  <div id="location">508 Hurffville-Cross Keys Rd.</div> -->
 
 
 
@@ -59,7 +59,11 @@
               <hr id="break1">
 
 
+              <a href="tel:8565830987" >856-583-0987</a>
+              <!-- <div id="call">856-583-0987</div> -->
+              <div id="location">508 Hurffville-Cross Keys Rd.</div>
 
+              <hr id="break1">
 
 
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
