--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
           
 
 
+            <div id="marquee">
+              <div id="text">Todays Specials Are: Ramen With Soup, Lamb Gyro, Cheddar Cheese Broccoli</div>
+          </div>
+
 
 
             <div id="hours1">Mon-Thurs 11AM-11PM • Fri & Sat 11AM-MIDNIGHT • Sun 12 NOON-11PM</div>
