--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
             <div id="marquee">
-              <div id="text">Todays Specials Are: Ramen With Soup, Lamb Gyro, Cheddar Cheese Broccoli</div>
+              <div id="text">Todays Specials Are Ramen with soup, Shrimp biscuit & Monster Lobster</div>
           </div>
 
 
