--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img id="foodImages"src="./img/food7.jpg"  class="d-block w-100" alt="...">
+                    <img id="foodImages"src="./img/IMG_3913.jpg"  class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img id="foodImages"src="./img/food7.jpg"  class="d-block w-100" alt="...">
+                    <img id="foodImages"src="./img/IMG_3930.jpg"  class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img id="foodImages"src="./img/food7.jpg"  class="d-block w-100" alt="...">
+                    <img id="foodImages"src="./img/IMG_3879.jpg"  class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
