--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
               <a href="tel:8565830987" >856-583-0987</a>
               <!-- <div id="call">856-583-0987</div> -->
-              <div id="location">508 Hurffville-Cross Keys Rd.</div>
+              <div id="location">27 N Maple Ave, Marlton, New Jersey, 08053</div>
 
               <hr id="break1">
 
